--- a/src/css/header/header.css
+++ b/src/css/header/header.css
@@ -17,6 +17,7 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
+  height: calc(100vh - 32px);
   min-height: 300px;
   width: 100%;
   box-sizing: border-box;
