--- a/src/css/project/__head/project__head.css
+++ b/src/css/project/__head/project__head.css
@@ -12,6 +12,8 @@
 }
 @media screen and (max-width: 576px) {
   .project__head {
+    padding-top: 16px;
+    padding-bottom: 0;
     padding-left: 5px;
     padding-right: 5px;
   }
