--- a/src/css/header/header.css
+++ b/src/css/header/header.css
@@ -11,7 +11,7 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
-  background-size: cover!important;
+  background-size: cover;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -33,5 +33,6 @@
 @media screen and (max-width: 576px) {
 .header {
     height: calc(100vh - 55px);
+    background-attachment: unset;
   }
 }
