--- a/src/css/project/__btn/project__btn.css
+++ b/src/css/project/__btn/project__btn.css
@@ -1,16 +1,17 @@
 .project__btn {
   display: inline-block;
   vertical-align: top;
-  padding: 1rem 2.5rem;
+  padding: 16px;
   background-color: transparent;
   color: #000;
   border: 1px solid #000;
-  border-radius: 35px;
+  /* border-radius: 35px; */
   text-transform: uppercase;
   cursor: pointer;
   transition: background-color .3s ease, color .3s ease;
   box-sizing: border-box;
   outline: none;
+  width: 100%;
 }
 
 .project__btn:hover,
@@ -18,6 +19,7 @@
 .project__btn:active {
   /* color: #fff;
   background-color: #000; */
+  background: #87878C;
 }
 @media screen and (max-width: 576px) {
   .project__btn {
