--- a/src/css/modal/__body/modal__body.css
+++ b/src/css/modal/__body/modal__body.css
@@ -1,12 +1,11 @@
 .modal__body {
-  padding: 2rem;
+  padding: 21px 15px;
   max-height: 90vh;
   overflow-y: auto;
 }
 
 @media screen and (max-width: 576px) {
   .modal__body {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 15px;
   }
 }
