--- a/src/css/modal/__head/modal__head.css
+++ b/src/css/modal/__head/modal__head.css
@@ -1,12 +1,14 @@
 .modal__head {
-  padding: 1.5rem 2rem;
+  /* padding: 1.5rem 2rem; */
+  padding: 5px 10px 11px;
   color: #737378;
   background-color: #000;
+  /* width: 100%;
+  width: calc(100% - 10px); */
+  margin: 5px 5px 0;
 }
-
 @media screen and (max-width: 576px) {
   .modal__head {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 5px 10px 25px;
   }
 }
