--- a/src/css/header/header.css
+++ b/src/css/header/header.css
@@ -24,7 +24,8 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   height: 100vh;
-  min-height: 300px;
+  min-height: -webkit-fill-available;
+  /* min-height: 300px; */
   width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
