--- a/src/css/header/header.css
+++ b/src/css/header/header.css
@@ -16,13 +16,13 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  /* -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
+          flex-direction: column; */
+  /* -webkit-box-pack: justify;
       -ms-flex-pack: justify;
-          justify-content: space-between;
+          justify-content: space-between; */
   height: 100vh;
   min-height: -webkit-fill-available;
   /* min-height: 300px; */
