--- a/src/css/header/header.css
+++ b/src/css/header/header.css
@@ -23,10 +23,11 @@
   /* -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; */
-  height: 100vh;
+  /* height: 100vh; */
   
   /* min-height: 300px; */
   width: 100%;
+  height: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
