--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,8 @@
   color: #000;
   line-height: 1.2;
   font-size: 36px;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 1920px) {
@@ -28,6 +30,10 @@
   .root {
     font-size: 14px;
   }
+}
+html, body {
+  width: 100%; 
+  height: 100%
 }
 body {
   background: #737378;
