--- a/src/css/footer/__item/footer__item.css
+++ b/src/css/footer/__item/footer__item.css
@@ -1,11 +1,11 @@
 .footer__item {
   /* padding: 0 .25rem; */
-  padding: 0 30px;
+  padding: 2px 30px;
   /* margin: 1.5rem 0; */
 }
 .footer__copy {
   padding: 30px 30px 0;
-  margin-top: 105px;
+  margin-top: 210px;
 }
 @media screen and (max-width: 991px) {
   .footer__item {
@@ -21,6 +21,6 @@
   }
   .footer__copy {
     padding: 0 15px;
-    margin-top: 36px;
+    margin-top: 72px;
   }
 }
