--- a/src/css/project/__btn/project__btn.css
+++ b/src/css/project/__btn/project__btn.css
@@ -1,7 +1,7 @@
 .project__btn {
   display: inline-block;
   vertical-align: top;
-  padding: 16px;
+  padding: 16px 16px 47px;
   background-color: transparent;
   color: #000;
   border: 1px solid #000;
