--- a/src/css/project/__desc/project__desc.css
+++ b/src/css/project/__desc/project__desc.css
@@ -5,6 +5,7 @@
 .project__center-txt {
   text-transform: uppercase;
   text-align: center;
+  padding: 5px 10px 13px;
 }
 
 @media screen and (max-width: 991px) {
