--- a/src/css/header/__title/header__title.css
+++ b/src/css/header/__title/header__title.css
@@ -1,17 +1,50 @@
 .header__title {
-  padding: 35px 35px 0px;
+  padding: 35px 34px 0px;
+    letter-spacing: 5px;
   white-space: nowrap;
-  font-size: 13.2vw;
+  font-size: 13vw;
   line-height: 1;
-  text-align: center;
+  /* text-align: center; */
   text-transform: uppercase;
   margin: 0 0 4.5rem;
   font-weight: 500;
   transition: font-size .5s ease;
 }
-
+@media screen and (max-width: 2500px) {
+  .header__title {
+    padding: 3px 21px 22px;
+    letter-spacing: 4px;
+    line-height: .7;
+  }
+}
+@media screen and (max-width: 1919px) {
+  .header__title {
+    margin: 0 0 31px;
+    letter-spacing: 2px;
+  }
+}
+@media screen and (max-width: 1439px) {
+  .header__title {
+    margin: 0 0 16px;
+    letter-spacing: normal;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .header__title {
+    padding: 3px 10px 0;
+    letter-spacing: 1px;
+    margin: 0;;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header__title {
+    font-size: 12.5vw;
+    padding: 3px 2vw 0;
+  }
+}
 @media screen and (max-width: 576px) {
   .header__title {
     margin-bottom: .5rem;
+    font-size: 12vw;
   }
 }
