--- a/src/css/header/__top/header__top.css
+++ b/src/css/header/__top/header__top.css
@@ -18,6 +18,7 @@
   text-align: left;
   padding: .75rem .75rem 0;
   margin-bottom: 0;
+  letter-spacing: normal;
 }
 
 .header__top--transform .header__span {
