--- a/src/css/project/__btn/project__btn.css
+++ b/src/css/project/__btn/project__btn.css
@@ -21,6 +21,9 @@
   background-color: #000; */
   background: #87878C;
 }
+.project__btn--active {
+  padding: 7px;
+}
 @media screen and (max-width: 576px) {
   .project__btn {
     padding: 11px 7px 7px;
