--- a/src/css/project/__desc/project__desc.css
+++ b/src/css/project/__desc/project__desc.css
@@ -1,23 +1,31 @@
 .project__desc {
   max-width: 50%;
-  padding: 0 2rem 2rem;
+  padding: 41px 30px 249px;
 }
 .project__center-txt {
   text-transform: uppercase;
   text-align: center;
-  padding: 5px 10px 13px;
+  padding: 12px 24px 53px;
 }
-
+.project__center-txt--mob {
+  display: none;
+}
 @media screen and (max-width: 991px) {
-  .project__desc {
-    max-width: 100%;
-  }
+
 }
 
 @media screen and (max-width: 576px) {
+  .project__center-txt {
+    padding: 5px 15px;
+  }
+  .project__center-txt--mob {
+    display: block;
+  }
   .project__desc {
-    padding-left: 1rem;
-    padding-right: 1rem;
-    padding-bottom: 1.5rem;
+    padding: 17px 15px 137px;
+  }
+  .project__desc {
+    
+    max-width: 100%;
   }
 }
