--- a/src/css/project/__head/project__head.css
+++ b/src/css/project/__head/project__head.css
@@ -8,7 +8,7 @@
 @media screen and (max-width: 576px) {
   .project__head {
     padding-top: 16px;
-    padding-bottom: 0;
+    padding-bottom: 3px;
     padding-left: 5px;
     padding-right: 5px;
   }
