--- a/src/css/header/__top/header__top.css
+++ b/src/css/header/__top/header__top.css
@@ -40,11 +40,15 @@
 @media screen and (max-width: 1439px) {
   .header__top--transform .header__item:last-of-type {
     padding-left: .75rem;
+    position: static;
   }
 }
 @media screen and (max-width: 576px) {
   .header__top--transform .header__title {
     font-size: 5vw;
     padding-bottom: .5rem;
+  }
+  .header__top--transform .header__item { 
+    padding-top: 0;
   }
 }
