--- a/src/css/modal/modal.css
+++ b/src/css/modal/modal.css
@@ -31,3 +31,8 @@
   transform: translateY(0%);
   z-index: 999;
 }
+@media screen and (max-width: 1439px) {
+  .modal {
+    font-size: 14px;
+  } 
+}
