--- a/src/css/header/__title/header__title.css
+++ b/src/css/header/__title/header__title.css
@@ -41,7 +41,9 @@
 }
 @media screen and (max-width: 576px) {
   .header__title {
-    margin-bottom: .5rem;
+    margin-bottom: 6px;
     font-size: 12vw;
+    letter-spacing: 2px;
+    padding: 7px 2vw 0;
   }
 }
