--- a/src/css/modal/__head/modal__head.css
+++ b/src/css/modal/__head/modal__head.css
@@ -17,3 +17,8 @@
     padding: 7px 26px 11px;
   }
 }
+@media screen and (max-width: 576px){
+  .modal__head {
+      padding: 7px 10px 11px;
+  }
+}
